--- a/styles.css
+++ b/styles.css
@@ -74,3 +74,22 @@ h1 {
 	top: 50%;
 	transform: translate(-50%, -50%);
 }
+
+.image-container {
+	margin: 10px 30%;
+}
+
+.image-container img {
+	width: 100%;
+	margin-top: 5px;
+}
+
+@media screen and (max-width: 600px) {
+	h1 {
+		font-size: 1rem;
+	}
+
+	.image-container {
+		margin: 10px;
+	}
+}
